Fix linter and minor tweaks